# cbdb-inputter-agent

./: .env.sample  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: 00-target-system-brief.md  01-implementation-plan.md  02-review-log.md  03-extraction-review-workflow.md  04-field-whitelists.md  05-testing-strategy.md  06-staging-preview-design.md
skills/cbdb-data-entry/: SKILL.md
src/cbdb_agent/: __main__.py  audit_log.py  batch_runner.py  cli.py  config.py  http_client.py  models.py  mutation_api.py  person_id.py  staging.py
tests/: conftest.py  test_audit_log.py  test_batch_runner.py  test_cli.py  test_config.py  test_http_client.py  test_main_entry_point.py  test_models.py  test_mutation_api.py  test_person_id.py  test_staging.py
